--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,19 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+
+.btn {
+  display: inline-block;
+  background : rgb(77, 119, 122);
+  color : rgb(223, 223, 223);
+  border: none;
+  padding : 5px, 5px;
+  margin : 5px;
+  border-radius :5px;
+  font-size : 20px;
+  font-family: Fira Sans;
+  font-weight: 400;
+  text-decoration: none;
+
+}
