--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,15 @@
+.App-header {
+  background-color: #33405a;
+  min-height: 50vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
+}
+
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -18,12 +30,38 @@ code {
   background : rgb(77, 119, 122);
   color : rgb(223, 223, 223);
   border: none;
-  padding : 5px, 5px;
-  margin : 5px;
+  margin : 10px;
   border-radius :5px;
   font-size : 20px;
   font-family: Fira Sans;
   font-weight: 400;
   text-decoration: none;
+  width : 100px;
+}
 
+.task {
+  background: #b92d2d;
+  width : 550px;
+  margin: 5px;
+  padding: 10px 20px;
+  cursor: pointer;
+  text-align : center;
+  font-family: "Monaco";
+  font-size: 20px;
+}
+
+.task.reminder {
+  border-left: 5px solid green;
+}
+
+.task h3 {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.taskDay {
+  font-size: 14px;
+  font-family: "DejaVu Sans";
+  font-style: italic;
 }
