--- a/src/index.css
+++ b/src/index.css
@@ -24,6 +24,11 @@ code {
     monospace;
 }
 
+.btn-block {
+  display: block;
+  width: auto;
+  padding-bottom: 20px;
+}
 
 .btn {
   display: inline-block;
@@ -33,15 +38,14 @@ code {
   margin : 10px;
   border-radius :5px;
   font-size : 20px;
-  font-family: Fira Sans;
+  font-family: Monaco;
   font-weight: 400;
-  text-decoration: none;
-  width : 100px;
+  width : auto;
 }
 
 .task {
   background: #b92d2d;
-  width : 550px;
+  width : auto;
   margin: 5px;
   padding: 10px 20px;
   cursor: pointer;
@@ -52,16 +56,68 @@ code {
 
 .task.reminder {
   border-left: 15px solid green;
+  size: auto;
 }
 
 .task h3 {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  width: auto;
 }
 
 .taskDay {
   font-size: 14px;
   font-family: "DejaVu Sans";
   font-style: italic;
+}
+
+.add-task {
+  margin-bottom: 2px;
+  padding-bottom: 20px;
+  width: auto;
+  border: black;
+  border-radius: 15px;
+
+}
+
+.form {
+  margin: 40px 5px;
+  padding-bottom: 5px;
+}
+
+.form label {
+  display: block;
+  font-size: 25px;
+}
+
+.form input {
+  width: 100%;
+  height: 40px;
+  flex: 2 1;
+  margin: 5px;
+  padding: 3px 7px;
+  font-size: 17px;
+  border-radius: 10px;
+}
+
+.form {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.form label {
+  flex: 1;
+}
+
+
+#remindercheck {
+  width: 40px;
+  height: 20px;
+} 
+
+.things {
+  width: 600px;
+  text-align: center;
 }
